--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 author:
   name             : "All Zero"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am interested in making something fun."
+  bio              : "I am interested in Game, Media Art, VR. Majored in Art&Technology."
   location         : "Seoul, Republic of Korea"
   email            : "allzero@u.sogang.ac.kr"
   links:
